--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,4 @@
 
-
-
 h1 {
     
     font-family: 'Bangers', cursive;
@@ -20,6 +18,14 @@ h2 {
     margin-bottom: 80px;
 }
 
+h3 {
+    font-family: 'Amatic SC', Regular;
+    color:rgb(255, 255, 255);
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 .center {
     text-align: center;
 }
@@ -37,10 +43,19 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+}
+
+
+.button {
+    background-color: #000000; /* Green */
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
   }
-
-
-  
-.zoom:hover {
-    transition: transform .2s;
-    transform: scale(1.1);
+    
